--- a/css/styling.css
+++ b/css/styling.css
@@ -283,6 +283,7 @@ margin-bottom: 8%;
     color: #d3d3d3;
     font-weight: bold;
     font-size: 1.5em;
+    cursor: pointer;
 }
 
 .contacts-cont .form form{
